# ndd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/ndd/: baseconvert.hpp  baseconvert_templates.hpp  debug.hpp
src/main/: ndd.cpp
src/runtime/: baseconvert.cpp
src/shlib/: baseconvert.cpp
